--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Namste React</title>
 </head>
 <body>
-    <div id="root">React</div>
+    <div id="root"></div>
     
 
     <script type="module" src="/App.js"></script>
